// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BED parser BED3 1`] = `
Object {
  "end": 10884,
  "refID": "contigA",
  "start": 10875,
  "strand": 0,
}
`;

exports[`BED parser BED3 2`] = `
Object {
  "end": 10884,
  "refID": "co,tigA",
  "start": 10875,
  "strand": 0,
}
`;

exports[`BED parser BED6 1`] = `
Object {
  "end": 10884,
  "name": "test",
  "refID": "contigA",
  "score": 0.5,
  "start": 10875,
  "strand": -1,
}
`;

exports[`BED parser BED6 2`] = `
Object {
  "end": 10884,
  "name": "test2",
  "refID": "co,tigA",
  "score": 0,
  "start": 10875,
  "strand": 1,
}
`;

exports[`BED parser BED6 3`] = `
Object {
  "end": 10884,
  "name": "test2",
  "refID": "cotigA",
  "start": 10875,
  "strand": 0,
}
`;

exports[`bigGenePred bigGenePred 1`] = `
Object {
  "block_count": 3,
  "block_sizes": Array [
    359,
    109,
    1189,
  ],
  "cds_end_stat": "none",
  "cds_start_stat": "none",
  "chrom_starts": Array [
    0,
    744,
    1352,
  ],
  "end": 14409,
  "exon_frames": Array [
    -1,
    -1,
    -1,
  ],
  "gene_name": "ENST00000456328.2",
  "gene_name2": "DDX11L1",
  "gene_type": "none",
  "name": "ENST00000456328.2",
  "name2": "DDX11L1",
  "refID": "chr1",
  "reserved": "255,128,0",
  "score": 1000,
  "start": 11868,
  "strand": 1,
  "thick_end": 11868,
  "thick_start": 11868,
  "type": "none",
}
`;

exports[`bigGenePred bigGenePred 2`] = `
Object {
  "block_count": 11,
  "block_sizes": Array [
    98,
    34,
    152,
    159,
    198,
    136,
    137,
    147,
    99,
    154,
    37,
  ],
  "cds_end_stat": "none",
  "cds_start_stat": "none",
  "chrom_starts": Array [
    0,
    601,
    1392,
    2203,
    2454,
    2829,
    3202,
    3511,
    3864,
    10334,
    15130,
  ],
  "end": 29570,
  "exon_frames": Array [
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
  ],
  "gene_name": "ENST00000488147.1",
  "gene_name2": "WASH7P",
  "gene_type": "none",
  "name": "ENST00000488147.1",
  "name2": "WASH7P",
  "refID": "chr1",
  "reserved": "255,128,0",
  "score": 1000,
  "start": 14403,
  "strand": -1,
  "thick_end": 14403,
  "thick_start": 14403,
  "type": "none",
}
`;
